# liberasurecode

./: .clang-format  .gitignore  .gitreview  .mailmap  .zuul.yaml  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  Xorcode.pc.in  aclocal.m4  autogen.sh  bindep.txt  build-c_eclib.sh  check-symbols.sh  clean-c_eclib.sh  configure  configure.ac  erasurecode.pc.in  erasurecode_rs_vand.pc.in  get_flags_from_cpuid.c  install-c_eclib.sh  libXorcode.sym  liberasurecode.sym  liberasurecode_rs_vand.sym  libnullcode.sym  other-requirements.txt
alg_sig/: Makefile.am  Makefile.in  alg_sig_test.c
doc/: Doxyfile  Makefile.am  api_definition.md  code_organization.md  doxygen.cfg.in  erasure_coding.md
eve/: get_product_version.sh  main.yml
eve/workers/: worker.yml
eve/workers/compile_centos_7/: Dockerfile
eve/workers/compile_centos_8/: Dockerfile
eve/workers/master/: Dockerfile  entrypoint.sh
eve/workers/master/config/: git_core.list  git_core.pubkey  github_git-lfs.list  ssh-config
eve/workers/master/requirements/: packages.list  python2.txt  python3.txt
eve/workers/master/wheels/: ring_buildenv-0.0.4-py3-none-any.whl
include/: alg_sig.h  config.h  config.h.in  config.h.in~  erasurecode.h  erasurecode_stdinc.h  xor_code.h  xor_hd_code_defs.h
include/erasurecode/: alg_sig.h  erasurecode.h  erasurecode_backend.h  erasurecode_helpers.h  erasurecode_helpers_ext.h  erasurecode_internal.h  erasurecode_log.h  erasurecode_postprocessing.h  erasurecode_preprocessing.h  erasurecode_stdinc.h  erasurecode_version.h  galois.h  list.h
include/isa_l/: isa_l_common.h
include/rs_vand/: liberasurecode_rs_vand.h  rs_galois.h  rs_vand_internal.h
include/xor_codes/: xor_code.h  xor_hd_code_defs.h
m4/: ax_ext.m4
playbooks/: enable-fips.yaml
playbooks/unittests/: install-libs-from-source.yaml  run.yaml
roles/install_isal/tasks/: main.yaml
roles/install_jerasure/tasks/: main.yaml
roles/test_liberasurecode/defaults/: main.yaml
roles/test_liberasurecode/tasks/: main.yaml
src/: Makefile.am  Makefile.in  alg_sig.c  crc32.c  erasurecode.c  erasurecode_helpers.c  erasurecode_postprocessing.c  erasurecode_preprocessing.c  main.c  xor_code.c  xor_hd_code.c
src/backends/isa-l/: isa_l_common.c  isa_l_rs_cauchy.c  isa_l_rs_lrc.c  isa_l_rs_vand.c  isa_l_rs_vand_inv.c  isa_l_vand.c
src/backends/jerasure/: jerasure_rs_cauchy.c  jerasure_rs_vand.c  jerasure_vand.c
src/backends/null/: null.c
src/backends/phazrio/: libphazr.c
src/backends/rs_vand/: liberasurecode_rs_vand.c  rs_vand.c
src/backends/shss/: shss.c
src/backends/xor/: flat_xor_3.c  flat_xor_hd.c
src/builtin/null_code/: Makefile.am  null_code.c
src/builtin/rs_vand/: Makefile.am  liberasurecode_rs_vand.c  rs_galois.c  rs_vand_internal.c
src/builtin/xor_codes/: Makefile.am  Makefile.in  xor_code.c  xor_hd_code.c
src/utils/chksum/: Makefile.am  alg_sig.c  crc32.c  galois.c  md5.c
test/: Makefile.am  libec_slap.c  liberasure_rs_isal_stress_test.c  liberasurecode_test.c  liberasurecode_threaded_test.c
test/builtin/rs_vand/: liberasurecode_rs_vand_test.c  rs_galois_test.c  rs_vand_internal_test.c
test/builtin/xor_codes/: test_xor_hd_code.c  test_xor_hd_code.h
test/utils/chksum/: test_alg_sig.c
tests/: alg_sig_test.c  test_xor_hd_code.h
tools/: gen_failure_combs.py
xor_codes/: Makefile.am  Makefile.in  test_xor_hd_code.c  xor_code.c  xor_hd_code.c
xor_codes/tools/: gen_goldilocks_codes.py
